Wed Jul 22 19:27:14 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI_CCM/ami_ccm_i.cpp:
        * tests/AMI_CCM/client.cpp:
          Improved reply handler per request.

Wed Jul 22 17:41:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI_CCM/ami_ccm.idl:
        * tests/AMI_CCM/ami_ccm_i.h:
        * tests/AMI_CCM/ami_ccm_i.cpp:
        * tests/AMI_CCM/client.cpp:
          Reply handler per request. Implemented a manager
          to handle this.

Wed Jul 22 11:45:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI_CCM/ami_ccm.idl:
        * tests/AMI_CCM/ami_ccm.mpc:
        * tests/AMI_CCM/ami_ccm_i.h:
        * tests/AMI_CCM/ami_ccm_i.cpp:
        * tests/AMI_CCM/client.cpp:
        * tests/AMI_CCM/server.cpp:
          Changed naming convention of some of the
          interfaces/functions

Wed Jul 22 11:13:50 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI_CCM/README:
        * tests/AMI_CCM/ami_ccm.idl:
        * tests/AMI_CCM/ami_ccm.mpc:
        * tests/AMI_CCM/ami_ccm_i.h:
        * tests/AMI_CCM/ami_ccm_i.cpp:
        * tests/AMI_CCM/client.cpp:
        * tests/AMI_CCM/exclusive.conf:
        * tests/AMI_CCM/muxed.conf:
        * tests/AMI_CCM/run_test.pl:
        * tests/AMI_CCM/server.conf:
        * tests/AMI_CCM/server.cpp:
          Added test to prepare AMI for ccm.

Mon Jul 20 07:51:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
          Fixed warnings on Solaris

Sun Jul 19 10:20:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
          Fixed compile warnings on HPUX

Thu Jul 16 00:41:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted this change, it breaks other platforms

        Wed Jul 15 16:10:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be_include/be_helper.h: