@@ -1,3 +1,9 @@
+Thu Jul 23 08:51:28 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/AMI_CCM/client.cpp:
+          Removed RH manager and made use of ref counting in
+          servants.
+
 Wed Jul 22 19:27:14 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/AMI_CCM/ami_ccm_i.cpp:
